Simplify integration tests
The workflows integration tests share a similar structure:
1. Create a project
2. Verify workflow definition exists
3. Run workflow execution

The first two elements can be generalized and provided some defaults to
simplify adding more tests.

Signed-off-by: Moti Asayag <masayag@redhat.com>